# BJTU-DiscreteMath-Homework-EquivalenceProcessor

./: CMakeLists.txt  main.cpp  readme.md  relation_processor.cpp  relation_processor.h  test_generator.cpp  test_generator.h
